[project]
name = "promptql2api"
version = "0.1.0"
description = "PromptQL → OpenAI/Anthropic-compatible local API gateway with streaming, tool calls, usage, and model mapping."
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.138.2",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "tiktoken>=0.13.0",
    "uvicorn[standard]>=0.49.0",
]

[project.scripts]
promptql-register = "registrar.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]
registrar = [
    "curl-cffi>=0.7",
    "playwright>=1.48,<1.60",
    "camoufox>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "registrar"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "anthropic>=0.115.0",
    "openai>=2.44.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
